// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`genMetadata worx 1`] = `
Object {
  "repoColonTag": "314218077608.dkr.ecr.us-east-2.amazonaws.com/evolve:api-account",
}
`;

exports[`genMetadata worx 2`] = `
Object {
  "repoColonTag": "314218077608.dkr.ecr.us-east-2.amazonaws.com/evolve:api-compliance",
}
`;

exports[`genMetadata worx 3`] = `
Object {
  "repoColonTag": "314218077608.dkr.ecr.us-east-2.amazonaws.com/evolve:cli-evo",
}
`;

exports[`genMetadata worx 4`] = `
Object {
  "repoColonTag": "314218077608.dkr.ecr.us-east-2.amazonaws.com/evolve:api-account-staging",
}
`;

exports[`genMetadata worx 5`] = `
Object {
  "repoColonTag": "314218077608.dkr.ecr.us-east-2.amazonaws.com/evolve:api-compliance-staging",
}
`;

exports[`genMetadata worx 6`] = `
Object {
  "repoColonTag": "314218077608.dkr.ecr.us-east-2.amazonaws.com/evolve:cli-evo-staging",
}
`;
